--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier": "prettier --ignore-unknown --no-error-on-unmatched-pattern --ignore-path .prettierignore --write ."
   },
   "devDependencies": {
+    "@project-serum/anchor": "^0.26.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "prettier": "^2.8.3"
   }
